BlockType: cleanup code.